# maivn-studio

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  pyrightconfig.json  security_sweep_2026-03-22.md
.claude/: launch.json
.github/workflows/: ci.yml  publish-pypi.yml
docs/: authoring-and-debugging.md  getting-started.md
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.test.ts  api.ts  scopeMemory.ts
frontend/src/lib/api_client/: app-config.test.ts  app-config.ts  apps.test.ts  apps.ts  demo-config.ts  demos.ts  discovery.test.ts  discovery.ts  prompts.test.ts  prompts.ts  schedules.ts  sessions.test.ts  sessions.ts  shared.ts
frontend/src/lib/components/: EmptyState.svelte  KeyValueDisplay.svelte  LoadingState.svelte  ResizablePanel.svelte
frontend/src/lib/components/chat/: ChatEmptyState.svelte  ChatExchangeList.svelte  ChatFilteredEmptyState.svelte  ChatPanel.svelte  ChatProcessingIndicator.svelte  chat-attachments.ts  chat-exchanges.test.ts  chat-exchanges.ts  chat-scroll.ts  prompt-sync.test.ts  prompt-sync.ts
frontend/src/lib/components/exchange/: BatchCompareView.svelte  BatchStructuredDiff.svelte  ExchangeBatchResultCard.svelte  ExchangeContainer.svelte  ExchangeInlineInterrupts.svelte  ExchangePhasePreamble.svelte  ExchangeScopeGroupList.svelte  ExchangeStatusMessages.svelte  ExchangeStructuredOutputCard.svelte  MemoryActivityPanel.svelte  ReevaluateChip.svelte  batch-structured-diff.test.ts  batch-structured-diff.ts  exchange-scope-groups.test.ts  exchange-scope-groups.ts  exchange-structured-output.ts
frontend/src/lib/components/interrupts/: InterruptContainer.svelte  InterruptDrawer.svelte  InterruptFloating.svelte  InterruptHybrid.svelte  InterruptInlineCard.svelte  InterruptInput.svelte  InterruptModal.svelte
frontend/src/lib/stores/: apps.svelte.ts  demos.svelte.ts  schedule.svelte.ts  session.svelte.test.ts  session.useSession.test.ts  theme.svelte.ts
frontend/src/lib/types/: apps.ts  chat.ts  config.ts  demos.ts  index.ts  interrupts.ts  memory.ts  messages.ts  session.ts
frontend/src/lib/utils/: clipboard.ts  external-links.ts  format.test.ts  format.ts  interruptDetection.test.ts  interruptDetection.ts  invocationMode.test.ts  invocationMode.ts  shortcuts.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: check_wheel_contents.py  oss_license_audit.py  release_guard.py
src/maivn_studio/: __init__.py  __main__.py  __version__.py  main.py  private_data.py
src/maivn_studio/api/: __init__.py  app.py  state.py
src/maivn_studio/api/routes/: __init__.py  discovery.py  prompts.py
src/maivn_studio/config/: __init__.py  loader.py  models.py
src/maivn_studio/discovery/: __init__.py  registry.py  scanner.py
src/maivn_studio/services/: __init__.py  event_bridge.py
src/maivn_studio/services/app_loader/: __init__.py  errors.py  loader.py  models.py
src/maivn_studio/services/demo_loader/: __init__.py  loader.py  models.py
src/maivn_studio/services/schedules/: __init__.py  manager.py  models.py
src/maivn_studio/services/session_manager/: __init__.py  events.py  execution.py  lifecycle.py  manager.py  messages.py  models.py  private_data.py  protocols.py
src/maivn_studio/services/studio_reporter/: __init__.py  interrupts.py  reporter.py
tests/: conftest.py  test_api_app_security.py  test_api_apps.py  test_api_demos.py  test_api_discovery.py  test_api_prompts.py  test_api_sessions_attachments_validation.py  test_app_loader.py  test_apps_routes_extended.py  test_config_loader.py  test_config_save.py  test_demo_loader.py  test_demos_routes_extended.py  test_discovery_scanner.py  test_event_bridge.py  test_event_bridge_extended.py  test_interrupts.py  test_introspection.py  test_private_data.py  test_session_manager_attachments.py  test_session_manager_batch.py  test_session_manager_interrupts.py  test_session_manager_private_data.py  test_session_manager_structured_output.py  test_session_models.py  test_sessions_routes.py  test_studio_reporter.py  test_studio_reporter_extended.py
tests/unit/: test_private_data.py  test_python_compatibility.py
tests/unit/api/: test_app_security.py
tests/unit/api/routes/: test_discovery.py  test_prompts.py
tests/unit/config/: test_loader.py  test_save.py
tests/unit/discovery/: test_scanner.py
tests/unit/services/: test_event_bridge.py  test_event_bridge_extended.py
tests/unit/services/app_loader/: test_errors.py  test_loader.py
tests/unit/services/session_manager/: test_attachments.py  test_batch.py  test_interrupts.py  test_models.py  test_private_data.py  test_structured_output.py
tests/unit/services/studio_reporter/: test_interrupts.py  test_reporter.py  test_reporter_extended.py
(+177 files in other folders)
