[project]
name = "maivn-studio"
version = "0.1.0"
description = "UI/UX developer tool for MAIVN SDK demos"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chad Heathcote" }]
keywords = ["maivn", "studio", "developer-tool", "fastapi"]
dependencies = [
    "fastapi>=0.115.0",
    "maivn>=0.1.0,<0.2.0",
    "maivn-shared>=0.1.0,<0.2.0",
    "pydantic>=2.12.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14,<1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.408",
]

[project.scripts]
maivn-studio = "maivn_studio.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/maivn_studio/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/maivn_studio"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]
xfail_strict = true
