[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn-studio"
version = "0.1.0"
description = "UI/UX developer tool for MAIVN SDK demos"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chad Heathcote", email = "developer@maivn.io" }]
keywords = ["maivn", "studio", "developer-tool", "fastapi"]
dependencies = [
    # Workspace packages
    "maivn>=0.1.0,<0.2.0",
    "maivn-shared>=0.1.0,<0.2.0",
    # Studio API runtime
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "sse-starlette>=2.1.3",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12,<1",
]

[project.scripts]
maivn-studio = "maivn_studio.main:main"

[tool.hatch.build]
artifacts = ["src/maivn_studio/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/maivn_studio"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true
